--- a/services/AD_docker_image/config/ioc.yaml
+++ b/services/AD_docker_image/config/ioc.yaml
@@ -15,14 +15,14 @@ entities:
   - type: epics.StartupCommand
     command: dbLoadRecords("/epics/ioc/config/ioc.db")
 
-  - type: epics.dbpf
-    pv: bl01t:A
-    value: "2.54"
+  # - type: epics.dbpf
+  #   pv: bl01t:A
+  #   value: "2.54"
 
-  - type: epics.dbpf
-    pv: bl01t:B
-    value: "2.61"
+  # - type: epics.dbpf
+  #   pv: bl01t:B
+  #   value: "2.61"
 
-  - type: epics.PostStartupCommand
-    command: |
-      dbgf bl01t:SUM
+  # - type: epics.PostStartupCommand
+  #   command: |
+  #     dbgf bl01t:SUM
