add third axis - DOES NOT WORK

--- a/services/MOTOR_docker_image/config/ioc.yaml
+++ b/services/MOTOR_docker_image/config/ioc.yaml
@@ -14,7 +14,7 @@ entities:
 
   - type: motorSim.simMotorController
     controllerName: sim-controller1
-    numAxes: 6
+    numAxes: 3
     P: "XF:31IDA-OP{Tbl-Ax:"
 
   - type: motorSim.simMotorAxis
@@ -31,12 +31,12 @@ entities:
     DESC: Motor Ax 2
     home: 2
 
-  # - type: motorSim.simMotorAxis
-  #   controller: sim-controller1
-  #   ADDR: 3
-  #   M: X3}Mtr
-  #   DESC: Motor Ax 3
-  #   home: 3
+  - type: motorSim.simMotorAxis
+    controller: sim-controller1
+    ADDR: 3
+    M: X3}Mtr
+    DESC: Motor Ax 3
+    home: 3
 
   # - type: motorSim.simMotorAxis
   #   controller: sim-controller1
