--- a/include/ioc.yml
+++ b/include/ioc.yml
@@ -7,7 +7,7 @@ services:
   linux_ioc: &linux_ioc
     labels:
       # a reference to which repository created this IOC
-      ioc_group: bl01t
+      # ioc_group: XF:31IDA
       # let tools identify which containers are IOCs
       is_ioc: true
       # in K8S each IOC can have an indication of what physical location it
@@ -24,8 +24,8 @@ services:
       # a prefix for devIocStats PVs. Configured externally for health_check
       IOC_PREFIX:
       IOC_LOCATION: localhost
-      BEAMLINE: bl01t
-      IOC_GROUP: bl01t
+      # BEAMLINE: XF:31IDA
+      # IOC_GROUP: XF:31IDA
       EPICS_CA_SERVER_PORT: ${EPICS_CA_SERVER_PORT}
       EPICS_CA_REPEATER_PORT: ${EPICS_CA_REPEATER_PORT}
       EPICS_PVA_SERVER_PORT: ${EPICS_PVA_SERVER_PORT}
