remove axis 3, x3 does not work

--- a/services/MOTOR_docker_image/config/ioc.yaml
+++ b/services/MOTOR_docker_image/config/ioc.yaml
@@ -31,12 +31,12 @@ entities:
     DESC: Motor Ax 2
     home: 2
 
-  - type: motorSim.simMotorAxis
-    controller: sim-controller1
-    ADDR: 3
-    M: X3}Mtr
-    DESC: Motor Ax 3
-    home: 3
+  # - type: motorSim.simMotorAxis
+  #   controller: sim-controller1
+  #   ADDR: 3
+  #   M: X3}Mtr
+  #   DESC: Motor Ax 3
+  #   home: 3
 
   # - type: motorSim.simMotorAxis
   #   controller: sim-controller1
