--- a/services/PE_docker_image/config/ioc.yaml
+++ b/services/PE_docker_image/config/ioc.yaml
@@ -8,66 +8,123 @@ entities:
     IOC: "{{ ioc_name | upper }}"
 
   - type: ADSimDetector.simDetector
-    PORT: DET.DET #idk the port, why det?
-    P: "ADSIM:XF:31IDA-BI{Cam:Tbl}" # assume this is the prefix?
-    R: ":cam:" # no clue, changed from det to cam
+    PORT: cam # nto usre if thise should be det or cam?
+    P: "ADSIM:XF:31IDA-BI{Cam:Tbl}" 
+    R: ":cam1:" # no clue, changed from det to cam1, tyr for cam 1 first
     # DATATYPE:0 = Int8 - TODO add an enum to the support yaml
     DATATYPE: 0
     WIDTH: 1024
     HEIGHT: 1024
 
-  # - type: epics.PostStartupCommand
-  #   command: |
-  #     dbpf XF:31IDA-BI{Cam:Tbl}:Proc1:EnableCallbacks 1
-  #     dbpf XF:31IDA-BI{Cam:Tbl}:ROI1:EnableCallbacks 1
-  #     dbpf BL01T-DI-CAM-01:PVA:EnableCallbacks 1
-  #     dbpf BL01T-DI-CAM-01:DET:Acquire 1
+  - type: epics.PostStartupCommand
+    command: |
+      dbpf XF:31IDA-BI{Cam:Tbl}:cam1:AcquireTime 0.1
+      dbpf XF:31IDA-BI{Cam:Tbl}:cam1:ROI1:EnableCallbacks 1
+      dbpf XF:31IDA-BI{Cam:Tbl}:cam1:ROI2:EnableCallbacks 1
+      dbpf XF:31IDA-BI{Cam:Tbl}:cam1:ROI3:EnableCallbacks 1
+      dbpf XF:31IDA-BI{Cam:Tbl}:cam1:ROI4:EnableCallbacks 1
+      dbpf XF:31IDA-BI{Cam:Tbl}:cam1:Acquire 1
 
-  # - type: ADCore.NDROI
-  #   PORT: DET.ROI
-  #   P: BL01T-DI-CAM-01
-  #   R: ":ROI:"
-  #   NDARRAY_PORT: DET.DET
 
-  # - type: ADCore.NDProcess
-  #   PORT: DET.PROC
-  #   P: BL01T-DI-CAM-01
-  #   R: ":PROC:"
-  #   NDARRAY_PORT: DET.ROI
+  - type: ADCore.NDROI
+    PORT: ROI1
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":ROI1:"
+    NDARRAY_PORT: cam
 
-  # - type: ADCore.NDPvaPlugin
-  #   PORT: DET.PVA
-  #   PVNAME: BL01T-DI-CAM-01:PVA:OUTPUT
-  #   P: BL01T-DI-CAM-01
-  #   R: ":PVA:"
-  #   NDARRAY_PORT: DET.DET
+  - type: ADCore.NDROI
+    PORT: ROI2
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":ROI2:"
+    NDARRAY_PORT: cam
 
-  # - type: ADCore.NDStdArrays
-  #   PORT: DET.ARR
-  #   P: BL01T-DI-CAM-01
-  #   R: ":ARR:"
-  #   NDARRAY_PORT: DET.PROC
-  #   TYPE: Int8
-  #   NELEMENTS: 1048576
-  #   FTVL: CHAR
+  - type: ADCore.NDROI
+    PORT: ROI3
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":ROI3:"
+    NDARRAY_PORT: cam
 
-  # - type: ADCore.NDStats
-  #   PORT: DET.STAT
-  #   P: BL01T-DI-CAM-01
-  #   R: ":STAT:"
-  #   NDARRAY_PORT: DET.DET
-  #   XSIZE: 1024
-  #   YSIZE: 1024
-  #   HIST_SIZE: 20
+  - type: ADCore.NDROI
+    PORT: ROI4
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":ROI4:"
+    NDARRAY_PORT: cam
 
-  # - type: ADCore.NDFileHDF5
-  #   PORT: DET.HDF
-  #   P: BL01T-DI-CAM-01
-  #   R: ":HDF:"
-  #   NDARRAY_PORT: DET.PROC
+  - type: ADCore.NDProcess
+    PORT: Proc1
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":Proc1:"
+    NDARRAY_PORT: cam
 
-  # - type: ADCore.NDFileTIFF
-  #   PORT: DET.TIFF
-  #   P: BL01T-DI-CAM-01
-  #   R: ":TIFF:"
-  #   NDARRAY_PORT: DET.PROC
+  - type: ADCore.NDPvaPlugin
+    PORT: PVA
+    PVNAME: XF:31IDA-BI{Cam:Tbl}:PVA:OUTPUT
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":PVA:"
+    NDARRAY_PORT: cam
+
+  - type: ADCore.NDStdArrays
+    PORT: image1
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":image1:"
+    NDARRAY_PORT: cam
+    TYPE: Int8
+    NELEMENTS: 1048576
+    FTVL: CHAR
+
+  - type: ADCore.NDStats
+    PORT: stats1
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":stats1:"
+    NDARRAY_PORT: cam
+    XSIZE: 1024
+    YSIZE: 1024
+    HIST_SIZE: 20
+
+  - type: ADCore.NDStats
+    PORT: stats2
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":stats2:"
+    NDARRAY_PORT: cam
+    XSIZE: 1024
+    YSIZE: 1024
+    HIST_SIZE: 20
+  
+  - type: ADCore.NDStats
+    PORT: stats3
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":stats3:"
+    NDARRAY_PORT: cam
+    XSIZE: 1024
+    YSIZE: 1024
+    HIST_SIZE: 20
+
+  - type: ADCore.NDStats
+    PORT: stats4
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":stats4:"
+    NDARRAY_PORT: cam
+    XSIZE: 1024
+    YSIZE: 1024
+    HIST_SIZE: 20
+
+  - type: ADCore.NDStats
+    PORT: stats5
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":stats5:"
+    NDARRAY_PORT: cam
+    XSIZE: 1024
+    YSIZE: 1024
+    HIST_SIZE: 20
+
+  - type: ADCore.NDFileHDF5
+    PORT: HDF1
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":HDF1:"
+    NDARRAY_PORT: cam
+
+  - type: ADCore.NDFileTIFF
+    PORT: TIFF1
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":TIFF1:"
+    NDARRAY_PORT: cam
