--- a/services/PE_docker_image/config/ioc.yaml
+++ b/services/PE_docker_image/config/ioc.yaml
@@ -132,3 +132,8 @@ entities:
     PORT: Over1
     NDARRAY_PORT: cam
 
+  - type: ADCore.NDTransform
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":Trans1:"
+    PORT: EnableCallbacks_RBV
+    NDARRAY_PORT: cam
