--- a/services/PE_docker_image/config/ioc.yaml
+++ b/services/PE_docker_image/config/ioc.yaml
@@ -137,3 +137,9 @@ entities:
     R: ":Trans1:"
     PORT: EnableCallbacks_RBV
     NDARRAY_PORT: cam
+
+  - type: ADCore.NDTransform
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":netCDF1:"
+    PORT: EnableCallbacks_RBV
+    NDARRAY_PORT: cam
