rename folders to clearer descriptions

--- a/services/ad_sim_docker_image/config/ioc.yaml
+++ b/services/ad_sim_docker_image/config/ioc.yaml
@@ -138,8 +138,8 @@ entities:
     PORT: EnableCallbacks_RBV
     NDARRAY_PORT: cam
 
-  - type: ADCore.NDTransform
-    P: XF:31IDA-BI{Cam:Tbl}
-    R: ":netCDF1:"
-    PORT: EnableCallbacks_RBV
-    NDARRAY_PORT: cam
+  # - type: ADCore.NDTransform
+  #   P: XF:31IDA-BI{Cam:Tbl}
+  #   R: ":netCDF1:"
+  #   PORT: EnableCallbacks_RBV
+  #   NDARRAY_PORT: cam
