--- a/services/.ioc_template/compose.yml
+++ b/services/.ioc_template/compose.yml
@@ -7,7 +7,7 @@ services:
       file: ../../include/ioc.yml
 
     image: replace_with_image_uri
-
+    platform: linux/amd64
     labels:
       version: 0.1.0
 
