--- a/services/ad_sim_docker_image/config/ioc.yaml
+++ b/services/ad_sim_docker_image/config/ioc.yaml
@@ -9,8 +9,8 @@ entities:
 
   - type: ADSimDetector.simDetector
     PORT: cam
-    P: "XF:31IDA-BI{Cam:Tbl}" 
-    R: ":cam1:" 
+    P: "XF:31IDA-BI{Cam:Tbl}"
+    R: ":cam1:"
     DATATYPE: 0
     WIDTH: 1024
     HEIGHT: 1024
@@ -78,7 +78,7 @@ entities:
     XSIZE: 1024
     YSIZE: 1024
     HIST_SIZE: 20
-  
+
   - type: ADCore.NDStats
     PORT: Stats3
     P: XF:31IDA-BI{Cam:Tbl}
@@ -127,19 +127,19 @@ entities:
     TIMEOUT: 5.0
 
   - type: ADCore.NDOverlay
+    PORT: Over1
     P: XF:31IDA-BI{Cam:Tbl}
     R: ":Over1:"
-    PORT: Over1
     NDARRAY_PORT: cam
 
   - type: ADCore.NDTransform
+    PORT: TRANS1
     P: XF:31IDA-BI{Cam:Tbl}
     R: ":Trans1:"
-    PORT: EnableCallbacks_RBV
     NDARRAY_PORT: cam
 
-  # - type: ADCore.NDTransform
-  #   P: XF:31IDA-BI{Cam:Tbl}
-  #   R: ":netCDF1:"
-  #   PORT: EnableCallbacks_RBV
-  #   NDARRAY_PORT: cam
+  - type: ADCore.NDFileNetCDF
+    PORT: NetCDF1
+    P: XF:31IDA-BI{Cam:Tbl}
+    R: ":netCDF1:"
+    NDARRAY_PORT: cam
